--- a/index.html
+++ b/index.html
@@ -62,19 +62,141 @@
                         Romantique
                     </li>
                     <li class="filters-item active">
+                        <i class="fa-solid fa-fire" aria-hidden="true"></i>
                         Nos pépites
                     </li>
                 </ul>
             </div>
             <div class="info">
-                <div class="icon-ctn">
-                    <i class="fa-solid fa-info" aria-hidden="true"></i>
-
+                <div class="info-icon-ctn">
+                    <i class="fa-solid fa-info info-icon" aria-hidden="true"></i>
                 </div>
+                <div class="info-text">Plus de 500 logements sont disponibles dans cette ville</div>
             </div>
         </section>
         <section id="accommodations" class="hebergements-and-populaires">
             <div class="hebergements">
+                <div class="hebergements-title">
+                    <h2 class="section-title">Hébergements à Marseille</h2>
+                </div>
+                <div class="hebergements-cards">
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/hebergements/fred-kleber.jpg" alt="Chambre d'hôtel du port" />
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Hôtel du port</h3>
+                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                </div>
+                                <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/hebergements/febrian-zakaria.jpg" alt="Chambre d'hôtel chez Amina" />
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Hôtel Chez Amina</h3>
+                                    <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                </div>
+                                <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/hebergements/fred-kleber.jpg" alt="Chambre d'hôtel montrant un lit" />
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Hôtel du port</h3>
+                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                </div>
+                                <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/hebergements/annie-spratt.jpg" alt="Chambre d'hôtel de la mer" />
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Hôtel de la mer</h3>
+                                    <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                </div>
+                                <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/hebergements/marcus-loke.jpg" alt="Chambre de l'auberge La Cannebière" />
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Auberge La Cannebière</h3>
+                                    <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                </div>
+                                <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/hebergements/nicate-lee.jpg" alt="Chambre de l'auberge Le Panier" />
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h3 class="card-title">Auberge Le Panier</h3>
+                                    <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                </div>
+                                <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+
+                </div>
+
 
             </div>
             <div class="populaires">
@@ -144,11 +266,62 @@
             </div>
         </section>
         <section id="activities" class="activities">
-
+            <div class="activities-title">
+                <h2 class="section-title">Activités à Marseille</h2>
+            </div>
+            <div class="activities-cards">
+                <div class="card">
+                    <img src="./images/activites/reno-laithienne.jpg" alt="">
+                    <div class="card-content">
+                        Vieux Port
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./images/activites/paul-hermann.jpg" alt="">
+                    <div class="card-content">
+                        Fort de Pomègues
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./images/activites/kilyan-sockalingum.jpg" alt="">
+                    <div class="card-content">
+                        Parc national des Calanques
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./images/activites/florian-wehde.jpg" alt="">
+                    <div class="card-content">
+                        Notre-Dame-de-la-Garde
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
-    <footer class="footer global-container"></footer>
+    <footer class="footer global-container">
+        <div class="footer-col">
+            <h2 class="footer-title">À propos</h2>
+            <ul class="footer-list">
+                <li class="footer-item">Fonctionnement du site</li>
+                <li class="footer-item">Conditions générales</li>
+                <li class="footer-item">Données et confidentialité</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h2 class="footer-title">Nos hébergements</h2>
+            <ul class="footer-list">
+                <li class="footer-item">Charte qualité</li>
+                <li class="footer-item">Proposer votre hôtel</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h2 class="footer-title">Assistance</h2>
+            <ul class="footer-list">
+                <li class="footer-item">Centre d’aide</li>
+                <li class="footer-item"><a href="mailto:contact@booki.com">Nous contacter</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
