adjust style btn and add seen more

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                 <ul class="filters-list">
                     <li class="filters-item">
                         <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
-                        Économique
+                        <span>Économique</span>
                     </li>
                     <li class="filters-item">
                         <i class="fa-solid fa-person" aria-hidden="true"></i>
-                        Familial
+                        <span>Familial</span>
                     </li>
                     <li class="filters-item">
                         <i class="fa-solid fa-heart" aria-hidden="true"></i>
-                        Romantique
+                        <span>Romantique</span>
                     </li>
                     <li class="filters-item active">
                         <i class="fa-solid fa-fire" aria-hidden="true"></i>
-                        Nos pépites
+                        <span>Nos pépites</span>
                     </li>
                 </ul>
             </div>
@@ -196,7 +196,7 @@
                     </a>
 
                 </div>
-
+                <div class="hebergements-seen-more">Afficher plus</div>
 
             </div>
             <div class="populaires">
