Remove of slaches for self-closing tags and fix empty alt

--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+   >
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
     <header class="header global-container">
       <div class="header-img-ctn">
-        <img src="./images/logo/Booki@3x.png" alt="Booki" />
+        <img src="./images/logo/Booki@3x.png" alt="Booki">
       </div>
       <nav class="header-menu-ctn d-flex">
         <ul class="header-menu-list d-flex">
@@ -42,7 +42,7 @@
           <label for="searchInput" class="search-label">
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
           </label>
-          <input type="search" name="searchInput" id="searchInput" class="search-input" value="Marseille, France" />
+          <input type="search" name="searchInput" id="searchInput" class="search-input" value="Marseille, France">
           <button class="search-btn">
             <i class="fa-solid fa-magnifying-glass search-btn-icon" aria-hidden="true"></i>
             <span class="search-btn-text">Rechercher</span>
@@ -85,7 +85,7 @@
           <div class="hebergements-cards">
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/fred-kleber.jpg" alt="Chambre d'hôtel du port" />
+                <img src="./images/hebergements/fred-kleber.jpg" alt="Chambre d'hôtel du port">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel du port</h3>
@@ -104,7 +104,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/febrian-zakaria.jpg" alt="Chambre d'hôtel chez Amina" />
+                <img src="./images/hebergements/febrian-zakaria.jpg" alt="Chambre d'hôtel chez Amina">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Chez Amina</h3>
@@ -123,7 +123,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/fred-kleber.jpg" alt="Chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/fred-kleber.jpg" alt="Chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel du port</h3>
@@ -142,7 +142,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/annie-spratt.jpg" alt="Chambre d'hôtel de la mer" />
+                <img src="./images/hebergements/annie-spratt.jpg" alt="Chambre d'hôtel de la mer">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel de la mer</h3>
@@ -161,7 +161,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/marcus-loke.jpg" alt="Chambre de l'auberge La Cannebière" />
+                <img src="./images/hebergements/marcus-loke.jpg" alt="Chambre de l'auberge La Cannebière">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Auberge La Cannebière</h3>
@@ -180,7 +180,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/nicate-lee.jpg" alt="Chambre de l'auberge Le Panier" />
+                <img src="./images/hebergements/nicate-lee.jpg" alt="Chambre de l'auberge Le Panier">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Auberge Le Panier</h3>
@@ -208,7 +208,7 @@
           <div class="populaires-cards">
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/emile-guillemot.jpg" alt="Chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/emile-guillemot.jpg" alt="Chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -227,7 +227,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/aw-creative.jpg" alt="Chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/aw-creative.jpg" alt="Chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -246,7 +246,7 @@
             </a>
             <a href="#">
               <article class="card">
-                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Bleu et Blanc</h3>
@@ -272,20 +272,20 @@
         </div>
         <div class="activities-cards">
           <div class="card">
-            <img src="./images/activites/reno-laithienne.jpg" alt="" />
+            <img src="./images/activites/reno-laithienne.jpg" alt="Vieux Port">
             <div class="card-content">Vieux Port</div>
           </div>
           <div class="card">
-            <img src="./images/activites/paul-hermann.jpg" alt="" />
+            <img src="./images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
             <div class="card-content">Fort de Pomègues</div>
           </div>
           <div class="card">
-            <img src="./images/activites/kilyan-sockalingum.jpg" alt="" />
+            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
             <div class="card-content">Parc national des Calanques</div>
           </div>
           <div class="card">
-            <img src="./images/activites/florian-wehde.jpg" alt="" />
-            <div class="card-content">Notre-Dame-de-la-Garde</div>
+            <img src="./images/activites/florian-wehde.jpg" alt="Notre-Dame de la Gard">
+            <div class="card-content">Notre-Dame de la Garde</div>
           </div>
         </div>
       </section>
