--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </section>
       <section id="accommodations" class="hebergements-and-populaires">
-        <div class="hebergements">
+        <div id="hebergement" class="hebergements">
           <div class="hebergements-title">
             <h2 class="section-title">Hébergements à Marseille</h2>
           </div>
